--- a/_posts/19-04-2014-TEDs.md
+++ b/_posts/19-04-2014-TEDs.md
@@ -12,7 +12,7 @@ tags: TED
 
 ###生活技巧
 [怎样用纸巾擦手](http://v.163.com/movie/2012/1/P/0/M8LD0V9UJ_M8M1030P0.html)：shake and fold, 每人每天节约一张纸。   
-[如何系鞋带](http://www.ted.com/talks/lang/zh-cn/terry_moore_how_to_tie_your_shoes.html)：如何携带才更美观，更不容易开？   
+[如何系鞋带](http://www.ted.com/talks/lang/zh-cn/terry_moore_how_to_tie_your_shoes.html)：如何系鞋带才更美观，更不容易开？   
 
 ###调查总结
 [8个成功秘笈](http://v.163.com/movie/2012/1/H/D/M8LD0V9UJ_M8LUU5EHD.html)：Passion, Work, Good, Focus, Push, Serve, Ideas, Persist   
