--- a/_posts/2015-06-13-Quickfix.md
+++ b/_posts/2015-06-13-Quickfix.md
@@ -8,7 +8,7 @@ tags:  VIM
 ###背景
 通常，我们在开发过程中，经常要写代码，编译，修改编译错误，这个过程会数十遍上百遍的重复。如果你是根据编译器输出的错误信息，打开出错的文件，找到出错的行，然后再开始修改，那效率未免太低下了。利用vim的quickfix模式，可以大大加快这一过程，你可以在vim启动编译，然后vim会根据编译器输出的错误信息，自动跳到第一个出错的地方，让你进行修改；修改完后，使用一个快捷键，跳到下一个错误处，再进行修改，方便的很。
 
-但是在不同的公司往往有不同的构建工具，能否有一种通用的方法，整合这些工具到quickfix呢？答案是肯定的，当前完成的目的的前提是你足够了解quickfix的工作原理
+但是在不同的公司往往有不同的构建工具，能否有一种通用的方法，整合这些工具到quickfix呢？答案是肯定的，当然完成的目的的前提是你足够了解quickfix的工作原理
 
 ###quickfix工作原理
 quickfix工作一般包括两个过程：     
@@ -16,7 +16,7 @@ quickfix工作一般包括两个过程：
 2、当编译出现错误时，vim会根据'errorformat'选项定义的格式从上述临时文件中读出错误信息，根据这些信息形成quickfix列表，并跳转到第一个错误出现的地方。
 
 
-然后你就可以轻松的使用以下命令逐个修复错误，然后再make了
+然后你就可以轻松的使用以下命令逐个修复错误，然后再:make了
       
 ```shell
 :cp   跳到上一个错误 ( :help :cp )      
@@ -39,9 +39,15 @@ vim可以同时记住最新的10个错误列表，你还可以根据以下命令
 ###整合编译工具
 下面以微信使用的构建工具[blade](https://github.com/chen3feng/typhoon-blade)为例，详细说明如果整合这些构建工具。整合的过程同样包括两部分：         
 1、定义makeprg选项的值为编译工具的编译命令，如：blade build -m32 -D -S         
-2、定义errorformat解析编译输出的错误信息，详细可以参考:help errorformat。如：**暂缺**                        
-(含义：解析以下内容的错误信息，并忽略其他信息：
-**暂缺**
+2、定义errorformat解析编译输出的错误信息，详细可以参考:help errorformat。如：
+
+```
+set errorformat+=%E%f:%l:%c:\ error:%m,%Z%m
+set errorformat+=%-G%.%#
+```                     
+(含义：
+1、解析以下内容的错误信息
+2、忽略其他信息
 )
 
 One more thing，一般构建工具的使用的根路径，可能跟你工程的根路径有差异，这就导致quickfix跳转时找不到文件路径。例如，我的项目目录为dirA，归属于项目组dir下，编译工具从dir开始编译，输出的错误信息的文件名是相对项目组的路径：     
@@ -77,8 +83,9 @@ set makeprg=mmake
 
 3、配置errorformat
 
-```
-**暂缺**
+```shell
+set errorformat+=%E%f:%l:%c:\ error:%m,%Z%m
+set errorformat+=%-G%.%#
 ```
 
 然后，可以愉快的工作了~~~
