--- a/_posts/2015-12-02-SQL-Index.md
+++ b/_posts/2015-12-02-SQL-Index.md
@@ -158,7 +158,7 @@ Explain详解
 使用一个示例SQL来解释explain：
 
 ```sql
-select id from r_ibeacon_biz_device_d where  ftime >= 20151126 and ftime <= 20151126  and biz_id = 11602 limit 50; 
+select id from v_ibeacon_device_d where  ftime >= 20151126 and ftime <= 20151126  and biz_id = 11602 limit 50; 
 ```
 IDX_BID_FTIME<biz_id,  ftime>是表r_ibeacon_biz_device_d的其中一条索引。
 Biz_id,ftime均为bigint类型。
@@ -204,7 +204,7 @@ Biz_id,ftime均为bigint类型。
 摇一摇周边后台的数据统计接口尔会有小尖峰，涉及了一条SQL：
 
 ```sql
-select d.id from r_ibeacon_biz_page_d d where d.ftime >= 20151126 and d.ftime <= 20151126  and d.biz_id = 11023  and d.page_id = 778495  limit 0,20；
+select d.id from v_ibeacon_page d where d.ftime >= 20151126 and d.ftime <= 20151126  and d.biz_id = 11023  and d.page_id = 778495  limit 0,20；
 ```
 
 表r_ibeacon_biz_page_d 的主要字段信息如下：
@@ -216,7 +216,7 @@ page_id varchar(200)
 Explain结果如下:
 
 ```
-explain select d.id from r_ibeacon_biz_page_d d where d.ftime >= 20151126 and d.ftime <= 20151126  and d.biz_id = 11023  and d.page_id = 778495  limit 0,20；
+explain select d.id from v_ibeacon_page d where d.ftime >= 20151126 and d.ftime <= 20151126  and d.biz_id = 11023  and d.page_id = 778495  limit 0,20；
 
 +----+-------------+-------+-------+-------------------+-------------------+---------+------+------+--------------------------+
 | id | select_type | table | type  | possible_keys     | key               | key_len | ref  | rows | Extra                    |
