--- a/_posts/2015-12-02-SQL-Index.md
+++ b/_posts/2015-12-02-SQL-Index.md
@@ -102,7 +102,7 @@ insert into t1 values (6,6,4,4,’f’);
 ```
 
 t1表的存储结构如下图所示(只画出了idx_t1_bcd索引与t1表结构，没有包括t1表的主键索引)：
-![]({{ site.url }}/public/blog-img/sql.png)
+![]({{ site.url }}/public/blog-img/sql.jpg)
 
 简单说明上图，idx_t1_bcd索引上有[b,c,d]三个字段，不包括[a,e]字段。idx_t1_bcd索引，首先按照b字段排序，b字段相同，则按照c字段排序，以此类推。 
 
