--- a/_posts/2015-12-02-SQL-Index.md
+++ b/_posts/2015-12-02-SQL-Index.md
@@ -264,3 +264,12 @@ SQL queries with an order by clause don’t need to sort the result explicitly i
 类型是否一致: int vs char（varchar）、varchar（32）vs varchar(64)
 字符集是否一致：涉及表关联时，两表字符集是否一致。
 
+- 多列数据作为组合索引如何使用？
+
+多列索引的情况，如果存在复杂的查询操作，需要增加一列hash列用于数据的过滤，如下：
+SELECT * FROM tbl_name WHERE hash_col=MD5(CONCAT(val1,val2)) AND col1=val1 AND col2=val2;
+
+
+更新记录：
+2016.02.01  增加组合索引复杂查询的使用方法
+
