--- a/_posts/2016-03-17-comm-sys.md
+++ b/_posts/2016-03-17-comm-sys.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 业界分布式系统
+title: 分布式算法与业界实践
 category: 后台技术
 tags:  
 ---
@@ -11,7 +11,21 @@ http://blog.csdn.net/zhanlijun/article/details/13169771
 
 
 ###分布式业务系统
+1、一致性
+2、容错
+3、安全
+
+
+###分布式存储
+
+
+###分布式原理
+分布式计算：原理、算法与应用
+https://book.douban.com/subject/10785422/
+
 分布式系统的事务处理：介绍分布式系统中的基础概念
 http://coolshell.cn/articles/10910.html
 
 
+
+分布
