--- a/_posts/2016-03-17-comm-sys.md
+++ b/_posts/2016-03-17-comm-sys.md
@@ -17,6 +17,8 @@ http://blog.csdn.net/zhanlijun/article/details/13169771
 
 
 ###分布式存储
+QQ资料平台与关系链：分而治之、读多写少、热点数据存储、容忍丢失数据存储的一种Master-nSlave架构。
+
 
 
 ###分布式原理
@@ -28,4 +30,8 @@ http://coolshell.cn/articles/10910.html
 
 
 
-分布
+###更新记录
+2016-03-22 新增QQ关系链与资料平台的总结
+
+
+
