--- a/_posts/2018-04-24-lock.md
+++ b/_posts/2018-04-24-lock.md
@@ -2,10 +2,13 @@
 layout: post
 title: 深入了解锁细节
 category: 后台开发
+tags: 锁 同步
 ---
 ### 背景
+编写并行程序必须要面对的一个难题：如何正确有效的保护共享数据。一些场景必然无法逃避锁的使用，最常见的应用就是：本地缓存。当使用锁的时候我们该注意什么？当锁成为性能瓶颈的时候我们该怎么优化做到有的放矢？
 
 ###操作代价
+如果关注性能，自然少不了要理解下，锁使用过程中性能到底消耗在哪里。如果一个锁自始至终只被一个线程使用。或者，一个锁被多个线程使用过，但是在任意时刻，都只有一个线程尝试获取锁，我们将以上两种锁称为非竞争锁，这种情况对性能的影响很小。对性能影响最严重的情况出现在多个线程同时尝试获取锁，即锁竞争。性能影响主要在于上下文切换以及数据的cacheline miss。因此，面对需要使用锁的情况，不要过分担心非竞争锁带来的开销，要关注那些真正发生了锁竞争的临界区中性能的优化。
 
 > 
 加锁耗时：10ns
@@ -16,6 +19,7 @@ CAS：100ns
 内存访问：100ns
 [http://yarchive.net/comp/linux/lock_costs.html](http://yarchive.net/comp/linux/lock_costs.html "http://yarchive.net/comp/linux/lock_costs.html")
 
+因此，在保证程序正确性的前提下，解决锁同步带来的性能损失的主要方向应该是降低锁竞争。通常，有以下三类方法：
 
 1. 减少持有锁的时间
 2. 降低请求锁的频率
@@ -42,4 +46,5 @@ CAS：100ns
 > - 原子变量提供了避免“热点域”更新导致锁竞争的方法，如计数器、序列发生器、或者对链表数据结构头节点引用的更新。
 
 
+###总结
 以上只是一些通用的减少锁竞争的手段，针对不同的业务场景还可以使用其他措施来优化锁竞争，例如：使用自旋锁代替独占锁，批量读取数据，减少锁冲突导致的上下文切换。
