--- a/_posts/2018-06-18-skiplist.md
+++ b/_posts/2018-06-18-skiplist.md
@@ -9,13 +9,11 @@ tags: 跳表
 
 下面来研究一下跳表的核心思想：
 
-先从链表开始，如果是一个简单的链表，那么我们知道在链表中查找一个元素I的话，需要将整个链表遍历一次。
+先从链表开始，如果是一个简单的链表，那么我们知道在链表中查找一个元素I的话，需要将整个链表遍历一次。                
+ ![linkedlist]({{ site.url }}/public/blog-img/skiplist/linkedlist.jpeg)
 
- ![image](http://mmbiz.qpic.cn/mmbiz_png/qR4rtg9WfejNfbQVVBTnUOzIxazkkgk1MK3BNFuMiaaZ7CibUiaDHrlAIcf2VysGeUFcW94pmYdZOgZgvfSHuicCEQ/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1)
-
- 如果是说链表是排序的，并且节点中还存储了指向前面第二个节点的指针的话，那么在查找一个节点时，仅仅需要遍历N/2个节点即可。
-
- ![image](http://mmbiz.qpic.cn/mmbiz_png/qR4rtg9WfejNfbQVVBTnUOzIxazkkgk1KYibIuCY429iaXYvC5WzaicJXtrOEnHUIAF5010H8RDWECYS4HHjNZguA/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1)
+如果是说链表是排序的，并且节点中还存储了指向前面第二个节点的指针的话，那么在查找一个节点时，仅仅需要遍历N/2个节点即可。        
+ ![2-level-linkedlist]({{ site.url }}/public/blog-img/skiplist/multi-level-linkedlist.jpeg)
 
 这基本上就是跳表的核心思想，其实也是一种通过“空间来换取时间”的一个算法，通过在每个节点中增加了向前的指针，从而提升查找的效率。
 
@@ -23,8 +21,8 @@ tags: 跳表
 按照上面生成链表的方式，上面每一层链表的节点个数，是下面一层的节点个数的一半，这样查找过程就非常类似于一个二分查找，使得查找的时间复杂度可以降低到O(log n)。但是，这种方法在插入数据的时候有很大的问题。新插入一个节点之后，就会打乱上下相邻两层链表上节点个数严格的2:1的对应关系。如果要维持这种对应关系，就必须把新插入的节点后面的所有节点（也包括新插入的节点）重新进行调整，这会让时间复杂度重新蜕化成O(n)。删除数据也有同样的问题。
 
 
-为了避免这一问题，skiplist不要求上下相邻两层链表之间的节点个数有严格的对应关系，而是为每个节点随机出一个层数(level)。比如，一个节点随机出的层数是3，那么就把它链入到第1层到第3层这三层链表中。为了表达清楚，下图展示了如何通过一步步的插入操作从而形成一个skiplist的过程（点击看大图）：
-![image](http://mmbiz.qpic.cn/mmbiz_png/qR4rtg9WfejNfbQVVBTnUOzIxazkkgk1V8A04S03qSJaE1CUcTibYricicWUu8ZSh5YNrtralcvS3MLob8Bq57iaog/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1)
+为了避免这一问题，skiplist不要求上下相邻两层链表之间的节点个数有严格的对应关系，而是为每个节点随机出一个层数(level)。比如，一个节点随机出的层数是3，那么就把它链入到第1层到第3层这三层链表中。为了表达清楚，下图展示了如何通过一步步的插入操作从而形成一个skiplist的过程（点击看大图）：        
+![skiplist]({{ site.url }}/public/blog-img/skiplist/skiplist.jpeg)
 
 
 ##### 如何确定层数？
@@ -57,8 +55,8 @@ MaxLevel = 32
 - 节点层数大于等于2的概率为p，而节点层数恰好等于2的概率为p(1-p)。
 - ...
 
-因此，一个节点的平均层数（也即包含的平均指针数目），计算如下：
-![image](http://mmbiz.qpic.cn/mmbiz_jpg/qR4rtg9WfejNfbQVVBTnUOzIxazkkgk139WwRT0AbQgjAbQzsLoLOOnIkQueAK7YZpicfSfzvZ7bSkiatdSbgeOw/640?wx_fmt=jpeg&tp=webp&wxfrom=5&wx_lazy=1)
+因此，一个节点的平均层数（也即包含的平均指针数目），计算如下：              
+![memory cost]({{ site.url }}/public/blog-img/skiplist/memory-cost.jpeg)
 
 很容易计算出：   
 当p=1/2时，每个节点所包含的平均指针数目为2；    
@@ -66,12 +64,12 @@ MaxLevel = 32
 
 
 ### 如何查询？
-由于跳表数据结构整体上是有序的，所以查找过程就是一个在上下层之间，在同一层中不断由前向后比对的过程。刚刚创建的这个skiplist总共包含4层链表，现在假设我们在它里面依然查找23，下图给出了查找路径：
-![image](http://mmbiz.qpic.cn/mmbiz_png/qR4rtg9WfejNfbQVVBTnUOzIxazkkgk1bK9bzCNSh3mZLxdxppnAHwmExgErlMMu90ibnweLsrZcEcic0x6GSYTw/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1)
+由于跳表数据结构整体上是有序的，所以查找过程就是一个在上下层之间，在同一层中不断由前向后比对的过程。刚刚创建的这个skiplist总共包含4层链表，现在假设我们在它里面依然查找23，下图给出了查找路径：            
+![skiplist find]({{ site.url }}/public/blog-img/skiplist/skiplist-find.jpeg)
 
 ### 如何插入删除？
-以在插入时，需要首先查找到合适的位置，然后就是修改指针（和链表中操作类似），然后更新跳表的level变量。由于同时要更改若干层的指针，跳表使用一个update数组来辅助指针切换。在查找的过程中，一旦当前节点的后继节点为空，或者后继结点比插入节点要大，说明找到了插入节点在该层的前驱节点，记录到update数组中。在切换指针时只需要遍历update数组即可完成所有层的指针切换。下图给出了插入路径，红色部分即为update数组内容。
-![image](https://images2015.cnblogs.com/blog/361309/201512/361309-20151205105328939-163766579.png)
+以在插入时，需要首先查找到合适的位置，然后就是修改指针（和链表中操作类似），然后更新跳表的level变量。由于同时要更改若干层的指针，跳表使用一个update数组来辅助指针切换。在查找的过程中，一旦当前节点的后继节点为空，或者后继结点比插入节点要大，说明找到了插入节点在该层的前驱节点，记录到update数组中。在切换指针时只需要遍历update数组即可完成所有层的指针切换。下图给出了插入路径，红色部分即为update数组内容。        
+![skiplist insert]({{ site.url }}/public/blog-img/skiplist/skiplist-insert.png)
 
 
 ### Redis为什么用skiplist而不用平衡树？
