--- a/_posts/2018-12-29-rand.md
+++ b/_posts/2018-12-29-rand.md
@@ -128,7 +128,35 @@ __random_r (buf, result)
 因此，**在多线程服务中，建议可以直接调用rand_r()代替rand()**
 
 
-### 伪随机生成算法：线性同余法
-那么上面这段代码究竟是什么是在做什么呢？其实主要是实现了线性同余算法。
+### 伪随机生成算法
+那么上面这段代码究竟是什么是在做什么呢？其实主要是实现了线性同余算法与线性累加反馈法。
 
-![线性同余法]({{ site.url }}/public/blog-img/lcg.png)
+线性同余法
+
+线性同余法，LCG(linear congruential generator)，是经典的伪随机数产生器算法，速度快，容易理解实现。 LCG 算法数学上基于公式：
+
+X(n+1) = (a * X(n) + c) % m
+
+其中，各系数为：模m, 系数a, 0 < a < m，增量c, 0 <= c < m，原始值(种子) 0 <= X(0) < m 。其中参数c, m, a比较敏感，或者说直接影响了伪随机数产生的质量。
+
+GLIBC中对LCG的实现，取a = 1103515245, c = 12345, m = 134217728，即
+> X(n+1) = (1103515245 * X(n) + 12345) & 2147483647
+
+## 线性累加反馈法
+
+线性累加反馈法，即LAFM（linear additive feedback method），以下是GLIBC使用的线性累加反馈法的流程描述。其中，2147483647 = 2^31 – 1，4294967296 = 2^32. 所有变量都是整数。 对于给定的种子常量s, 初始化序列r0…r33通过以下步骤计算：
+
+1. r(0) = s
+2. r(i) = (16807 * r(i-1) ) % 2147483647 (i = 1…30)
+3. r(i) = r(i-31) (i = 31…33)
+    > 注意数乘16807的结果应该由足够大的整数类型存储，避免取模操作之前发生值溢出。r(i-1)在乘法操作已经是32位整数，r(i)计算结果确保是0到2147483646之间的正整数, 即使r(i-1)为负数。
+
+从r34开始的伪随机序列，通过以下的线性反馈循环来计算：
+
+4. r(i) = (r(i-3) + r(i-31)) % 4294967296 (i ≥ 34)
+
+忽略掉r0…r343序列，rand()函数输出的伪随机数o(i)为：
+
+5. o(i) = r(i+344) >> 1
+
+    > r(i+344)的个位数字移除，生成31位随机数o(i)。
