--- a/_posts/2018-12-29-rand.md
+++ b/_posts/2018-12-29-rand.md
@@ -142,7 +142,7 @@ X(n+1) = (a * X(n) + c) % m
 GLIBC中对LCG的实现，取a = 1103515245, c = 12345, m = 134217728，即
 > X(n+1) = (1103515245 * X(n) + 12345) & 2147483647
 
-## 线性累加反馈法
+线性累加反馈法
 
 线性累加反馈法，即LAFM（linear additive feedback method），以下是GLIBC使用的线性累加反馈法的流程描述。其中，2147483647 = 2^31 – 1，4294967296 = 2^32. 所有变量都是整数。 对于给定的种子常量s, 初始化序列r0…r33通过以下步骤计算：
 
