--- a/_posts/2015-06-13-Quickfix.md
+++ b/_posts/2015-06-13-Quickfix.md
@@ -5,6 +5,9 @@ category: 后台技术
 tags:  VIM
 ---
 
+* TOC
+{:toc}
+
 ### 背景
 通常，我们在开发过程中，经常要写代码，编译，修改编译错误，这个过程会数十遍上百遍的重复。如果你是根据编译器输出的错误信息，打开出错的文件，找到出错的行，然后再开始修改，那效率未免太低下了。利用vim的quickfix模式，可以大大加快这一过程，你可以在vim启动编译，然后vim会根据编译器输出的错误信息，自动跳到第一个出错的地方，让你进行修改；修改完后，使用一个快捷键，跳到下一个错误处，再进行修改，方便的很。
 
