--- a/_posts/2015-12-02-SQL-Index.md
+++ b/_posts/2015-12-02-SQL-Index.md
@@ -5,6 +5,9 @@ category: 后台技术
 tags:  MYSQL
 ---
 
+* TOC
+{:toc}
+
 ### 背景
 Mysql数据库作为数据持久化的存储系统，在实际业务中应用广泛。在应用也经常会因为SQL遇到各种各样的瓶颈。最常用的Mysql引擎是innodb，索引类型是B-Tree索引，增删改查等操作最经常遇到的问题是“查”，查询又以索引为重点（没索引不是病，慢起来太要命）。踩过O2O优惠券、摇一摇周边两个业务的一些坑，当谈到SQL优化时，想分享下innodb下B-Tree索引的一些理解与实践。
 
