--- a/_posts/2016-03-21-trie.md
+++ b/_posts/2016-03-21-trie.md
@@ -5,6 +5,9 @@ category: 数据结构与算法
 tags:  
 ---
 
+* TOC
+{:toc}
+
 ### 背景
 Trie字典树是一种常见的数据结构，在UC实习时同组的同学曾使用Trie进行词频统计。当然Trie还能用于快速检索(前缀匹配)。下面将探讨Trie的若干问题
 
