--- a/_posts/2016-04-04-kmp.md
+++ b/_posts/2016-04-04-kmp.md
@@ -5,6 +5,9 @@ category: 数据结构与算法
 tags:  
 ---
 
+* TOC
+{:toc}
+
 ### 描述
 字符串匹配的问题可以大致描述为：给定主串S(Source，长度为n)，模式串P(Pattern,长度为m)，要求查找出P在S中出现的位置。最常见的做法的是暴力查找，linux的string.h中使用的就是：
 
