--- a/_posts/2018-04-24-lock.md
+++ b/_posts/2018-04-24-lock.md
@@ -4,6 +4,11 @@ title: 深入了解锁细节
 category: 后台开发
 tags: 锁 同步
 ---
+
+* TOC
+{:toc}
+
+
 ### 背景    
 编写并行程序必须要面对的一个难题：如何正确有效的保护共享数据。一些场景必然无法逃避锁的使用，最常见的应用就是：本地缓存。当使用锁的时候我们该注意什么？当锁成为性能瓶颈的时候我们该怎么优化做到有的放矢？
 
