--- a/_posts/2018-06-18-skiplist.md
+++ b/_posts/2018-06-18-skiplist.md
@@ -4,6 +4,10 @@ title: 跳表
 category: 后台开发
 tags: 跳表
 ---
+
+* TOC
+{:toc}
+
 ### 什么是跳表？
 跳表是平衡树的一种替代方案，可实现Log(n)级别的插入、删除。和平衡树不同的是，跳表并不保证严格的“平衡性”，而是采用更为随性的方法：随机平衡算法。
 
