--- a/_posts/2018-12-29-rand.md
+++ b/_posts/2018-12-29-rand.md
@@ -5,6 +5,9 @@ category: 后台开发
 tags: rand
 ---
 
+* TOC
+{:toc}
+
 ### 背景
 在做微信看一看的时候，由于推荐服务中经常会有打散等随机操作，所以经常会使用到rand函数获取随机数。在做性能优化的时候发现，rand函数在多线程服务中性能非常之差。当前回忆起来因此有了这篇文章。
 
