add subjects for blog

--- a/_posts/2015-12-02-SQL-Index.md
+++ b/_posts/2015-12-02-SQL-Index.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 当当谈SQL优化时谈些什么
-category: 后台技术
-tags:  MYSQL
+title: 当谈SQL优化时谈些什么
+keywords:
+  - MYSQL
+  - 索引优化
 ---
 
 * TOC
